# easeurl

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
app/: index.html
pages/: index.html
src/: main.rs
