[package]
name = "url-short-fred"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
fred = { version = "9.2.0", features = ["enable-native-tls"] }
tokio = { version = "1.40.0", features = ["full"] }
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = "4.9.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
shuttle-runtime = "0.48.0"
shuttle-secrets = "0.42.0"
shuttle-actix-web = "0.48.0"
anyhow = "1.0.91"
